Fix roll spacing

--- a/src/app/bowling-scoreboard/bowling-scoreboard.component.scss
+++ b/src/app/bowling-scoreboard/bowling-scoreboard.component.scss
@@ -56,7 +56,7 @@
 
     .rolls {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
       margin-bottom: 5px;
       font-size: 13px;
